[package]
name = "block_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = {version="2.3.2", default-features=false, features=["encoding", "middleware-logger", "hyper-client"]}
log = "0.4.17"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.40", features = ["vendored"] }